fix cors production